added info to virtual classes
