# app/Http/Controllers/API/V1/BookController.php
@@ -7,6 +7,7 @@ use App\Models\Book;
 use App\Models\FreezerBlock;
 use App\Models\Location;
 use Illuminate\Http\Request;
+use Symfony\Component\HttpFoundation\Response as HttpResponse;
 
 class BookController extends ApiController
 {
@@ -20,21 +21,43 @@ class BookController extends ApiController
      *     @OA\Response (
      *          response = "200",
      *          description = "Successfull operation",
-     *          @OA\MediaType(
-     *              mediaType="application/json",
-     *          )
-     *     )
+     *          @OA\JsonContent(ref="#/components/schemas/BooksListResponse"),
+     *     ),
+     *     @OA\Response(
+     *          response=401,
+     *          description="Unauthorized"
+     *      )
      * )
-     * Display a listing of the resource.
      */
     public function index()
     {
         $books = Book::byUserId(auth()->id())->get();
-        return $this->sendResponse($books);
+        return $this->sendResponse(BookResource::collection($books));
     }
 
     /**
+     * @OA\Post (
+     *     path = "/books",
+     *     operationId = "bookAdd",
      *
+     *     security = {{"bearer_token": {}}},
+     *     tags = {"Booking"},
+     *     summary = "Store new book",
+     *     description = "Return created book data",
+     *     @OA\RequestBody (
+     *          required = true,
+     *          @OA\JsonContent(ref = "#/components/schemas/BookStoreRequest")
+     *     ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/BookItemResponse")
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthorized",
+     *      )
+     * )
      *
      * We use this method on location details page and have location_id in uri.
      * Need use this value in the form like hidden input.
@@ -49,11 +72,11 @@ class BookController extends ApiController
             'location_id' => 'bail|required|integer|gt:0|exists:' . Location::class . ',id',
             'days' => 'required|integer|between:1,24',
             'temperature' => 'required|integer|lte:0',
-            'volume' => 'required|integer|gt:0',
+            'volume' => 'required|numeric|gt:0',
         ]);
 
         if ($validator->fails()) {
-            return $this->sendError('Validation Error.', $validator->errors());
+            return $this->sendError('Validation Error.', $validator->errors(),);
         }
 
         //get available blocks with filter
@@ -65,9 +88,14 @@ class BookController extends ApiController
         $maxAvailableVolume = $blocks->map->properties->sum('volume');
 
         // check volume max value
+        if (!$maxAvailableVolume) {
+            $validator->errors()->add('volume', 'There are no free blocks for the filter. Change filter settings.');
+            return $this->sendError('Volume Error.', $validator->errors());
+        }
+
         if ($input['volume'] > $maxAvailableVolume) {
             $validator->errors()->add('volume', 'The volume must be less or equal to ' . $maxAvailableVolume);
-            return $this->sendError('Volume Error. ', $validator->errors());
+            return $this->sendError('Volume Error.', $validator->errors());
         }
 
         //generate collection of blocks for booking. Calc volume
@@ -80,11 +108,52 @@ class BookController extends ApiController
         if (!$newBook) {
             return $this->sendError('Creating booking error');
         }
+
         FreezerBlock::whereIn('id', $bookBlocks->pluck('id'))->update([
             'book_id' => $newBook->id
         ]);
 
-        return $this->sendResponse(new BookResource(Book::find($newBook->id)), 'Location created successfully.');
+        return $this->sendResponse(new BookResource(Book::find($newBook->id)), 'Book created successfully.', HttpResponse::HTTP_CREATED);
+    }
+
+
+    /**
+     * @OA\Get (
+     *     path = "/books/{id}",
+     *     operationId = "bookGet",
+     *     security = {{"bearer_token": {}}},
+     *     tags = {"Booking"},
+     *     summary = "Get book",
+     *     @OA\Response (
+     *          response = "200",
+     *          description = "Successfull operation",
+     *          @OA\JsonContent(ref="#/components/schemas/BookItemResponse"),
+     *     ),
+     *     @OA\Response(
+     *          response=401,
+     *          description="Unauthorized"
+     *      ),
+     *     @OA\Response(
+     *          response=404,
+     *          description="Not Found"
+     *      )
+     * )
+     */
+    public function show(Book $book)
+    {
+        if ($book->user_id !== auth()->user()->getAuthIdentifier()) {
+            return $this->sendError('Permission denied.');
+        }
+        return $this->sendResponse((new BookResource($book))->includeRandomCode(), "Book retrieved successfully.");
+    }
+
+
+    public function update(Request $request, Book $book)
+    {
+    }
+
+    public function destroy(Book $book)
+    {
     }
 
 }
